// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headings renders H1 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 1.1428571428571428;
  font-weight: 500;
  letter-spacing: -0.5px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.22142857142857142em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2839285714285714em;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders H1 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0A0A0A;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.22142857142857142em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 1.2;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders H2 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 1.1428571428571428;
  font-weight: 500;
  letter-spacing: -0.5px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.22142857142857142em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2839285714285714em;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders H2 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0A0A0A;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 22px;
    line-height: 1.0909090909090908;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.19545454545454544em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.25795454545454544em;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders H3 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 1.1428571428571428;
  font-weight: 500;
  letter-spacing: -0.5px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.22142857142857142em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2839285714285714em;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders H3 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0A0A0A;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 22px;
    line-height: 1.0909090909090908;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.19545454545454544em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.25795454545454544em;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders H4 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 1.1428571428571428;
  font-weight: 500;
  letter-spacing: -0.5px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.22142857142857142em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2839285714285714em;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders H4 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0A0A0A;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 18px;
    line-height: 1.1111111111111112;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders H5 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 1.1428571428571428;
  font-weight: 500;
  letter-spacing: -0.5px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.22142857142857142em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2839285714285714em;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders H5 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 400;
  letter-spacing: -0.5px;
  color: #0A0A0A;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.25em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3125em;
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders H6 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 1.1428571428571428;
  font-weight: 500;
  letter-spacing: -0.5px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.22142857142857142em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2839285714285714em;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders H6 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 400;
  letter-spacing: -0.5px;
  color: #0A0A0A;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders Heading1 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 1.1428571428571428;
  font-weight: 500;
  letter-spacing: -0.5px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.22142857142857142em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2839285714285714em;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders Heading1 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0A0A0A;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.22142857142857142em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 40px;
    line-height: 1.2;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders Heading2 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 1.1428571428571428;
  font-weight: 500;
  letter-spacing: -0.5px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.22142857142857142em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2839285714285714em;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders Heading2 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0A0A0A;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 22px;
    line-height: 1.0909090909090908;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.19545454545454544em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.25795454545454544em;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders Heading3 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 1.1428571428571428;
  font-weight: 500;
  letter-spacing: -0.5px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.22142857142857142em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2839285714285714em;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders Heading3 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0A0A0A;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 22px;
    line-height: 1.0909090909090908;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.19545454545454544em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.25795454545454544em;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders Heading4 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 1.1428571428571428;
  font-weight: 500;
  letter-spacing: -0.5px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.22142857142857142em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2839285714285714em;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders Heading4 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0A0A0A;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 18px;
    line-height: 1.1111111111111112;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Bitter",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 500;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders Heading5 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 1.1428571428571428;
  font-weight: 500;
  letter-spacing: -0.5px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.22142857142857142em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2839285714285714em;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders Heading5 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 400;
  letter-spacing: -0.5px;
  color: #0A0A0A;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.25em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3125em;
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders Heading6 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 28px;
  line-height: 1.1428571428571428;
  font-weight: 500;
  letter-spacing: -0.5px;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.22142857142857142em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2839285714285714em;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #2B4AAB;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-0:visited:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #5E44E4;
}

.emotion-0:visited:hover:not(:disabled) {
  color: #5E44E4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:visited:hover:not(:disabled) svg {
  fill: #5E44E4;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders Heading6 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Bitter",serif;
  font-size: 16px;
  line-height: 1.25;
  font-weight: 400;
  letter-spacing: -0.5px;
  color: #0A0A0A;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.275em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3375em;
}

.emotion-0 svg {
  fill: #0A0A0A;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;
